# dwarf-fortress-jp-helper

./: .gitignore  LICENSE  README.md
hook/: CMakeLists.txt  vcpkg.json
hook/src/: cxxstring.h  dllmain.cpp  hooks.cpp  hooks.h  offsets.cpp  offsets.h  pipe.cpp  pipe.h
release/: DFJP起動.cmd  README_DFJP.txt  RELEASE_NOTES_ja.md
scripts/: build_release.ps1
tools/: __init__.py  collect_third_party_licenses.py  detect_offsets.py
translator/: config.py  config.toml  gui.py  main.py  manual_translation_rules.template.tsv  manual_translation_rules.tsv  pipe_reader.py  pyproject.toml  runtime_paths.py  translator.py
