[project]
name = "dfjp-translator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8.0",
    "capstone>=5.0.0",
    "deep-translator>=1.11.0",
    "deepl>=1.18.0",
    "pefile>=2024.8.26",
    "pywin32>=306",
]

[tool.uv]
# スクリプト群のプロジェクトのため、パッケージとしてインストールしない
package = false
